<resources>
    <string name="app_name">NolascoPad</string>
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="senha">Senha:</string>
    <string name="telefone">Número de telefone:</string>
    <string name="confirmasenha">Confirmar senha:</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="logar">Entrar</string>
    <string name="imageselect">Selecionar imagem</string>
    <string name="editar">Editar cadastro</string>
    <string name="salvar">Salvar</string>
    <string name="mypost">Minhas postagens</string>
    <string name="sair">Sair</string>

    <string name="fab_cloud">Salvar na nuvem</string>
    <string name="fab_add">Adicionar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_bar_open">Abriu fodase</string>
    <string name="navigation_bar_close">Fechou fodase</string>

    <string name="book_put_success">Upload dos livros foi bem sucedido</string>

</resources>
